v11/fixtures/ast/errors/ensure_runs/source.able
do {
  raise "oops"
} rescue {
  case _ => "rescued"
} ensure {
  print("ensure")
}
